Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore trunk:

* Packages with unsupported EAPIs are now automasked.  Longer term,
  proper exposing of the masking reason will be implemented- in the interim,
  this matches pkgcores normal behaviour.

* Pkgcore now parses EAPI from the ebuild itself, rather than from the
  metadata calculated value.

* .eapi attribute on packages is now mostly unsupported; should instead use
  .eapi_obj instead (an alias will be left in place for that long term).

* format_magic attribute was dropped from ebuild repositories; shouldn't
  have been used (was always a hack).


pkgcore 0.8.6, October 29th, 2012

* Fix false positive test failure under py3k related to /etc/passwd
  encoding (gentoo bug 439800).

* Better error messages for config errors.


pkgcore 0.8.5: October 18th, 2012

* pkgcore now matches the new PMS rules on package naming (specifically
  that the last component can't be a version at all, period).  Also
  tightened up some stupidly horrible allowed names- stuff like diff-mode-
  for a package name (gentoo bug #438370).

* pkgcore no longer supports the old form cvs version component; for
  example, diffball-cvs.1.0 (cvs version of 1.0 for diffball).  This has
  long since been deprecated- basically since day 1 of cvs.  It's been
  basically six years, no vdb usage should exist anymore, thus dropping
  support for it.

* Fixed test sporadic test failure- false positive code quality check.
  Gentoo bug 437216.

* Fixed doc generation for py3k.


pkgcore 0.8.4: October 4th, 2012

* Fix bad function reference in eapi3 guts.


pkgcore 0.8.3: October 4th, 2012

* Fixed bug where default phases weren't guranteed to be ran.


pkgcore 0.8.2: October 1st, 2012

* Fixed pmaint exception for when eclass preloading was enabled.


pkgcore 0.8.1: September 29th, 2012

* Pkgcore now requires snakeoil 0.5.1.
